@@ -204,6 +204,7 @@ typedef struct iCSRmat{
  * Coordinate Format (I,J,A)
  *
  * \note The starting index of A is 0.
+ * \note Change I to rowind, J to colind. To avoid with complex.h confliction on I.
  */
 typedef struct dCOOmat{
 	
@@ -217,10 +218,10 @@ typedef struct dCOOmat{
 	INT nnz;
 	
     //! integer array of row indices, the size is nnz
-	INT *I;   
+	INT *rowind;
 	
     //! integer array of column indices, the size is nnz
-	INT *J;    
+	INT *colind;
 	
     //! nonzero entries of A
 	REAL *val;
