@@ -1,6 +1,6 @@
      560 ./base/include/dlmalloc.h
      170 ./base/include/doxygen.h
-    1128 ./base/include/fasp.h
+    1129 ./base/include/fasp.h
      672 ./base/include/fasp_block.h
     2857 ./base/include/fasp_functs.h
       47 ./base/include/forts_ns.h
@@ -34,7 +34,7 @@
       72 ./base/src/eigen.c
      110 ./base/src/famg.c
      285 ./base/src/fmgcycle.c
-    1144 ./base/src/formats.c
+    1145 ./base/src/formats.c
       80 ./base/src/givens.c
     1011 ./base/src/gmg_poisson.c
      748 ./base/src/graphics.c
@@ -45,7 +45,7 @@
      754 ./base/src/input.c
     1387 ./base/src/interpolation.c
      842 ./base/src/interpolation_em.c
-    3234 ./base/src/io.c
+    3230 ./base/src/io.c
      542 ./base/src/itsolver_bcsr.c
      801 ./base/src/itsolver_bsr.c
      707 ./base/src/itsolver_csr.c
@@ -107,4 +107,4 @@
       88 ./base/src/itsolver_util.inl
      233 ./base/src/linklist.inl
      240 ./base/src/mg_util.inl
-   88665 total
+   88663 total
