@@ -1,11 +1,12 @@
 File Name: CHANGES
 
-07/10/2014 FASP 1.5.5:
+07/23/2014 FASP 1.5.5:
 - Modify the parameter for pairwise aggregation.
 - Fix warnings for data type REAL in sparse_bsr.c
 - Update results of the regression test.
 - Add block preconditioners for MHD.
 - Update block preconditioners.
+- Change dCOOmat entries to avoid conflicts with complex.h.
 
 06/20/2014 FASP 1.5.4:
 - Fix a bug in io.c.
